# buchungssystem

./: .env.example  .gitignore  AI_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.streamlit/: config.toml
backend/: auswertung.py  config.py  database.py  demo_daten.py  main.py  models.py
frontend/: app.py
